--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 			<a href="/newsletter"><h3 >NEWSLETTER</h3></a>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-And-App-Developers/"><h3>JOIN THE MEETUP</h3></a>
 			<a href="#" class="usefullinks"><h3  >USEFUL LINKS</h3></a>
-			<a href="startup-weekend.html" ><h3  >STARTUP WEEKEND</h3></a>
 			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
 			<h3><script async defer src="https://jawad-slack.herokuapp.com/slackin.js?large"></script></h3>
 		</section>
@@ -217,21 +216,21 @@
 					</h4>
 					<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
 				</div>
-				<!-- <div class="hive">
+				<div class="hive">
 					<h4>
-						<a target="_blank" href="http://www.workinthehive.com">#thehive</a>
+						<a target="_blank" href="http://www.workinthehive.com">builtbygood.co</a>
 					</h4>
-					<p>#HIVE is a workspace community of entrepreneurs, freelancers, and creators. The hive offers a non-traditional working environment that puts their members together in one place with coworkers from different backgrounds. This dynamic allows for incredible cross-market collaboration.</p>
-				</div> -->
+					<p>Good for agencies. Good for startups.</p>
+				</div>
 			</section>
 
 			<section class="mobile-sponsors">
 				<div class="mobile-sponsor">
 					<a target="_blank" href="http://www.webcare360.com"><p class="mobile-sponsor-link">Webcare360.com</p></a>
 				</div>
-				<!-- <div class="mobile-sponsor" style="margin-top:30px;">
-					<a target="_blank" href="http://www.workinthehive.com"><p class="mobile-sponsor-link">#thehive</p></a>
-				</div> -->
+				<div class="mobile-sponsor" style="margin-top:30px;">
+					<a target="_blank" href="http://builtbygood.co/"><p class="mobile-sponsor-link">builtbygood.co</p></a>
+				</div>
 			</section>
 
 		</div>
