--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
 						<p>Webcare 360</p>
 						<img src="images/webcare.png" style="width:250px;" alt="">
 					</div>
-					<!-- <div class="sponsor sponsortwo">
-						<p>The Hive</p>
-						<img src="images/hive.png" style="width:250px;" alt="">
+					<div class="sponsor sponsortwo">
+						<p>good.</p>
+						<img src="images/goodlogot.png" style="width:250px;" alt="">
 					</div>
-				</div> -->
+				</div>
 				<div class="clearfix"></div>
 				<div class="webcare">
 					<h4>
@@ -218,7 +218,7 @@
 				</div>
 				<div class="hive">
 					<h4>
-						<a target="_blank" href="http://www.workinthehive.com">builtbygood.co</a>
+						<a target="_blank" href="http://www.builtbygood.co">builtbygood.co</a>
 					</h4>
 					<p>Good for agencies. Good for startups.</p>
 				</div>
