--- a/index.html
+++ b/index.html
@@ -201,27 +201,49 @@
 			<section class="sponsor-container-section">
 				<div class="sponsorcontainer">
 					<div class="sponsor sponsorone" >
-						<p>Webcare 360</p>
-						<img src="images/webcare.png" style="width:250px;" alt="">
+						<p>C Spire</p>
+						<img src="images/cspire.png" style="width:195px;padding-top:7px" alt="">
 					</div>
 					<div class="sponsor sponsortwo">
 						<p>good.</p>
 						<img src="images/goodlogot.png" style="width:250px;" alt="">
 					</div>
+					<div style="clear:both;" />
 				</div>
 				<div class="clearfix"></div>
-				<div class="webcare">
+				<div class="cspire sponsorShow">
 					<h4>
-						<a target="_blank" href="http://www.Webcare360.com">Webcare360.com</a>
+						<a target="_blank" href="http://www.cspire.com">CSpire.com</a>
 					</h4>
-					<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
+					<p>C Spire is the Customer Inspired technology solutions company. Wireless, business solutions, cloud services and fiber to the home</p>
 				</div>
-				<div class="hive">
+				<div class="good sponsorShow">
 					<h4>
 						<a target="_blank" href="http://www.builtbygood.co">builtbygood.co</a>
 					</h4>
 					<p>Good for agencies. Good for startups.</p>
 				</div>
+				<div class="sponsor sponsorthree" >
+					<p>Coalesce</p>
+					<img src="images/coalesce.png" style="width:195px;padding-top:7px" alt="">
+				</div>
+				<div class="sponsor sponsorfour">
+					<p>Webcare360</p>
+					<img src="images/webcare.png" style="width:250px;" alt="">
+				</div>
+				<div class="coalesce sponsorShow">
+					<h4>
+						<a target="_blank" href="http://coalescejxn.com/">Coalescejxn.com</a>
+					</h4>
+					<p>Coalesce is a cooperative and collaborative coworking space located in the central business district of Jackson, Mississippi</p>
+				</div>
+				<div class="webcare sponsorShow">
+					<h4>
+						<a target="_blank" href="http://www.builtbygood.co">webcare360.com</a>
+					</h4>
+					<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
+				</div>
+				<div class="clearfix"></div>
 			</section>
 
 			<section class="mobile-sponsors">
