--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 						<img src="images/cspire.png" style="width:195px;padding-top:7px" alt="">
 					</div>
 					<div class="sponsor sponsortwo">
-						<p>good.</p>
+						<p>Good Design &amp; Code</p>
 						<img src="images/goodlogot.png" style="width:250px;" alt="">
 					</div>
 					<div style="clear:both;" />
@@ -221,7 +221,7 @@
 					<h4>
 						<a target="_blank" href="http://www.builtbygood.co">builtbygood.co</a>
 					</h4>
-					<p>Good for agencies. Good for startups.</p>
+					<p>Good Design &amp; Code is an small interface design studio based in Jackson, Mississippi with a focus on building beautiful, usable, and performant applications for web and mobile platforms.</p>
 				</div>
 				<div class="sponsor sponsorthree" >
 					<p>Coalesce</p>
