Add Meetup.com widget to nav

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 			<a href="#" class="usefullinks"><h3  >USEFUL LINKS</h3></a>
 			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
 			<h3><script async defer src="https://jawad-slack.herokuapp.com/slackin.js?large"></script></h3>
+			<!-- Meetup.com Widget -->
+			<div class="meetup-widget" style="width: 225px;" id="1481165648732"></div>
 		</section>
 	</div>
 </div>
@@ -294,5 +296,6 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/resize.js"></script>
+<script src="js/meetup-widget.js"></script>
 </body>
 </html>
